# FA-viz

./: Cargo.toml  match-d.nfa
lib/: digraph.rs  lib.rs  nfa.rs
nfa/: Cargo.toml
nfa/src/: dfa.rs  lib.rs  to_dfa.rs
optimize-dfa/: Cargo.toml
optimize-dfa/lga-tts/: dfa0-dfa-tt-out.txt  dfa0-dfa-tt.txt  dfa1-dfa-tt.txt  dfa2-dfa-tt-out.txt  dfa2-dfa-tt.txt
optimize-dfa/src/: lib.rs
optimize-dfa/tests/: test-0-expected-output.txt  test-0-input.txt  test-1-actual-output.txt  test-1-expected-output.txt  test-1-input.txt  test-2-actual-output.txt  test-2-expected-output.txt  test-2-input.txt  test-3-actual-output.txt  test-3-expected-output.txt  test-3-input.txt  test_runner.rs
src/: cli_args.rs  main.rs
tool/: Cargo.toml
tool/src/: digraph.rs  main.rs
